--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 <b>GitHub:</b> <a href="https://github.com/Rodrigoviba">https://github.com/Rodrigoviba </a> <br>
 
 <iframe width="1021" height="632" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTWWxi7KPbKZIhOG7rEec8JfzU7OaUZNQqp-s35YbHxTnW-VG4ZCjHg0560LWMwmkCKlKbGVsv34Og6/pubchart?oid=1037928478&amp;format=interactive"></iframe>
-
+<br>
 <iframe title="Renta per cápita / Emisiones totales ]" aria-label="Scatter Plot" id="datawrapper-chart-WfiGG" src="https://datawrapper.dwcdn.net/WfiGG/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+
+<br>
+<iframe title="AG2_peliculas" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=25265e66-5bcd-4551-abb4-22fa8c98cd5b&autoAuth=true&ctid=9b6bdfe8-7dce-491c-9c22-6214e23478f3&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1qLXByaW1hcnktcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
