--- a/index.html
+++ b/index.html
@@ -9,3 +9,10 @@
 
 <br>
 <iframe title="AG2_peliculas" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=25265e66-5bcd-4551-abb4-22fa8c98cd5b&autoAuth=true&ctid=9b6bdfe8-7dce-491c-9c22-6214e23478f3&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1qLXByaW1hcnktcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
+
+
+<h1>Visualización – AG2 </h1>
+<b>Nombre:</b> Rodrigo Vicario Badía <br>
+<b>URL:</b> <a href="https://js-crkoey.stackblitz.io">https://js-crkoey.stackblitz.io </a> <br>
+<b>GitHub:</b> <a href="https://github.com/Rodrigoviba">https://github.com/Rodrigoviba </a> <br>
+<iframe title="AG2_peliculas" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=25265e66-5bcd-4551-abb4-22fa8c98cd5b&autoAuth=true&ctid=9b6bdfe8-7dce-491c-9c22-6214e23478f3&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLW5vcnRoLWV1cm9wZS1qLXByaW1hcnktcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
